# agh_advancedcpp

./: .gitignore  CMakeLists.txt  Makefile  board.cpp  board.hpp  config.rtl  engine.cpp  engine.hpp  game_of_life  if.rtl  main.cpp  rtl_parser.cpp  rtl_parser.hpp
include/: board.hpp  engine.hpp  rtl_parser.hpp
src/: board.cpp  engine.cpp  main.cpp  parser.cpp  rtl_parser.cpp
